# mp2-lab2-matrix

./: CMakeLists.txt  sample_matrix
include/: tmatrix.h
samples/: sample_matrix.cpp
test/: test_tmatrix.cpp  test_tvector.cpp
